--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -4,7 +4,7 @@
 {% block content %}
  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <form class="form-inline my-2 my-lg-0" action ="# patientSearch " method="GET">
+    <form class="form-inline my-2 my-lg-0" action ="{% url 'searchResult' %}" method="GET">
       <input class="form-control mr-sm-2" type="text" 
       name ='q' id= 'id_q' placeholder="Patient suchen" aria-label="Search">
       <script type="text/javascript">
@@ -16,7 +16,7 @@
 </nav>
 
 <h2>Patientenliste</h2>
-<br>
+<br> 
 {% for instance in object_list reversed %}
 <div class="card border-info mb-3 w-100" >
   <div class="card-body">
