--- a/templates/modality/modality_delete.html
+++ b/templates/modality/modality_delete.html
@@ -7,7 +7,33 @@
 <form method='POST'> {% csrf_token %}
     <h4> Möchten Sie die Modalität "
         {{ object.title}}" löschen?</h4>
-    <input type='submit' value ='Ja'/>
-    <a href='../'>Nein</a>
+    <div class="card border-info mb-3 w-100" >
+        <div class="card-body">
+        <div class="container">
+          <div class="row">
+            <div class = "card w-2">
+            <div class="col">
+              <img src="/static/images/mri.png" class="card-img-top" width="55" height="45">
+            </div>
+          </div>
+            
+          </div>
+        </div>
+          
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">AETitle: {{ object.title }}</li>
+              <li class="list-group-item">Beschreibung: {{ object.description }}</li>
+              <li class="list-group-item">IP: {{ object.ip }}</li>
+              <li class="list-group-item">Port: {{ object.port }}</li>
+              <li class="list-group-item">Status: {{ object.status }}</li>
+              <li class="list-group-item"> Standort: {{ object.associate_location }}</li>
+    
+            </ul>  
+          
+          </div>
+        </div>
+   
+    <input type='submit' class="btn btn-outline-primary"  value ='Ja'/>
+    <a href="{% url 'modalities' %}" class="btn btn-outline-primary" >Nein</a>
 </form>
 {% endblock %}
