--- a/templates/patient/patient_create.html
+++ b/templates/patient/patient_create.html
@@ -104,6 +104,6 @@
         </div>
     </div>
     <input type='submit' value='Speichern' class="btn btn-outline-primary" />
-
+    <a href="{% url 'patients' %}" class="btn btn-outline-primary" >Abbrechen</a>
 </form>
 {% endblock %}
