--- a/templates/patient/patient_detail.html
+++ b/templates/patient/patient_detail.html
@@ -106,6 +106,7 @@
         </div>
     </div>
     <input type='submit' value='Ändern' class="btn btn-outline-primary" />
+    <a href="{% url 'patients' %}" class="btn btn-outline-primary" >Abbrechen</a>
 </form>
 
 {% endblock %}
