--- a/templates/modality/create.html
+++ b/templates/modality/create.html
@@ -87,6 +87,7 @@
             </ul>
         </div>
     </div>
-    <input type='submit' value ='Save'/>
+    <input type='submit' class="btn btn-outline-primary" value ='Speichern'/>
+    <a href="{% url 'modalities' %}" class="btn btn-outline-primary" >Abbrechen</a>
 </form>
 {% endblock %}
