--- a/templates/modality/create.html
+++ b/templates/modality/create.html
@@ -5,13 +5,12 @@
 <h2> Neue Modalität hinzufügen</h2>
 
 <form method='POST'> {% csrf_token %}
-    <!-- {{ form.as_p}} -->
-      
+         
     <div class="card border-info mb-3">
         <div class="card-body">
             <div class="container">
                 <div class="row">
-                    <div class="card w-2">
+                    <div class="card w-2 border-0">
                         <div class="col">
 
                             <img src="/static/images/mri.png" class="card-img-top" width="55" height="45">
@@ -21,18 +20,30 @@
                 </div>
 
             </div> 
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
+            <div class="card-body "> 
+                <div class="container">
+                    
+              
+            
+               
                     <div class="row">
                         <div class="col">
                             <label>AETitle: </label>
                         </div>
                         <div class="col">
+                            {{form.ae_title}}
+                        </div>
+                    </div>
+               <br>
+                    <div class="row">
+                        <div class="col">
+                            <label>Title: </label>
+                        </div>
+                        <div class="col">
                             {{form.title}}
                         </div>
                     </div>
-                </li>
-                <li class="list-group-item">
+                <br>
                     <div class="row">
                         <div class="col">
                             <label>Beschreibung: </label>
@@ -41,8 +52,7 @@
                             {{form.description}}
                         </div>
                     </div>
-                </li>
-                <li class="list-group-item">
+               <br>
                     <div class="row">
                         <div class="col">
                             <label>IP: </label>
@@ -51,8 +61,7 @@
                             {{form.ip}}
                         </div>
                     </div>
-                </li>
-                <li class="list-group-item">
+               <br>
                     <div class="row">
                         <div class="col">
                             <label>Port: </label>
@@ -61,18 +70,8 @@
                             {{form.port}}
                         </div>
                     </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col">
-                            <label>Status: </label>
-                        </div>
-                        <div class="col">
-                            {{form.status}}
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
+                <br>
+                    
                     <div class="row">
                         <div class="col">
                             <label>Standort: </label>
@@ -81,10 +80,12 @@
                             {{form.associate_location }}
                         </div>
                     </div>
-                </li>
-                 
-                 
-            </ul>
+               
+             
+               </div>
+            </div>    
+            
+      
         </div>
     </div>
     <input type='submit' class="btn btn-outline-primary" value ='Speichern'/>
